# globalplatform

./: .gitignore  README.md
branches/GlobalPlatform-6.0.0/: ChangeLog  GlobalPlatform.cbp  GlobalPlatform.workspace  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in  libtool
branches/GlobalPlatform-6.0.0/main/: GlobalPlatform.c  GlobalPlatformTest.c  Makefile  Makefile.am  Makefile.in  connection.c  crypto.c  debug.c  dyn_unix.c  loadfile.c  stringify.c
branches/GlobalPlatform-6.0.0/main/GlobalPlatform/: GlobalPlatform.h  connection.h  connectionplugin.h  debug.h  error.h  unicode.h
branches/GlobalPlatform-6.0.0/plugins/pcsc/: Makefile  Makefile.am  Makefile.in  pcscconnectionplugin.c  pcscconnectionpluginTest.c
branches/globalplatform-6.0.0/globalplatform/src/: globalplatform.c
branches/globalplatform_cmake/: CMakeLists.txt  CMake_Win32.txt  README  ubuntu-snapshot.sh
branches/globalplatform_cmake/globalplatform/: CMakeLists.txt  ChangeLog  README  ubuntu-package.sh  ubuntu-release.sh
branches/globalplatform_cmake/globalplatform/cmake_modules/: FindGlobalPlatform.cmake  UploadPPA.cmake  copyright.gpl  copyright.lgpl
branches/globalplatform_cmake/globalplatform/debian/: changelog
branches/globalplatform_cmake/globalplatform/src/: CMakeLists.txt  crypto.c  globalplatform.c  stringify.c
branches/globalplatform_cmake/gppcscconnectionplugin/: CMakeLists.txt  ChangeLog  README
branches/globalplatform_cmake/gppcscconnectionplugin/debian/: changelog  copyright
branches/globalplatform_cmake/gppcscconnectionplugin/src/: CMakeLists.txt  version.rc
branches/globalplatform_cmake/gpshell/: CMakeLists.txt  ChangeLog  Makefile  README
branches/globalplatform_cmake/gpshell/debian/: changelog
branches/globalplatform_cmake/gpshell/src/: Makefile
branches/globalplatform_cmake/src/: CMakeLists.txt
branches/globalplatform_cmake/src/globalplatform/: CMakeLists.txt
branches/libglobalplatform_cmake/src/: loadfile.c
tags/GlobalPlatform-5.0.0/: GlobalPlatform.c
trunk/globalplatform/: configure
trunk/globalplatform/src/: globalplatform.c
trunk/globalplatform/src/globalplatform/: globalplatform.h
trunk/gppcscconnectionplugin/: configure
trunk/gpshell/: Makefile.in  configure
trunk/gpshell/src/: Makefile.in  gpshell.c
